<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, RadioActivity!</string>
    <string name="app_name">Radio</string>
    <string name="play_button">Play</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="turn_off">Turn off radio</string>
    <string name="search_manual">Manual search</string>
    <string name="selectall">Select all</string>
    <string name="turn_off_720">Exit</string>
    <string name="search_manual_720">Select a channel</string>
    <string name="allchannel">Channel list</string>
    <string name="scope1">87 - 108</string>
    <string name="scope1_a">87～108</string>
    <string name="scope2">0 - 9</string>
    <string name="scope2_a">0～9</string>
    <string name="auto_scan">Automatic search</string>
    <string name="last_channel">Previous channel</string>
    <string name="next_channel">Next channel</string>
    <string name="rename">Rename</string>
    <string name="ok">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="warning_inputtoolong">Input too long</string>
    <string name="warning_pleaseinputmore">Please input the name</string>
    <string name="warning_outofscope">Out of range Please enter again</string>
    <string name="plugheadset">Please insert earphone cord and retry</string>
    <string name="listhead_number_channel">Serial number channel name</string>
    <string name="listhead_number_720">Serial number</string>
    <string name="MHz">MHz</string>
    <string name="MHz_ar">MHz</string>
    <string name="listhead_favoritestatus">Favorites</string>
    <string name="listhead_favorite_720">Add to favor</string>
    <string name="listhead_playing">"Play
Status"</string>
    <string name="listhead_playing_720">Playing</string>
    <string name="stop">Stop</string>
    <string name="channellist_null">Channel is empty.Please add channel(s)</string>
    <string name="channel">Channel</string>
    <string name="deviceisopening">Device is opening</string>
    <string name="seeking">Searching</string>
    <string name="scan_result">Searching results</string>
    <string name="scaning_info">Found</string>
    <string name="scaning_info2">Found</string>
    <string name="scaning_info3">Channels</string>
    <string name="speakerOFF">Play with speaker</string>
    <string name="speakerON">Play with earphone</string>
    <string name="use_speaker">Play with speaker</string>
    <string name="use_headphone">Play with earphone</string>
    <string name="exit_ensure">Do you want to exit radio?</string>
    <string name="FM">FM</string>
    <string name="delete_alert">Are you sure you want to delete the selected channel?</string>
    <string name="exit_calling">Line busy. Please turn on radio again after ending conversation</string>
    <string name="recorder_pause">Pause</string>
    <string name="recorder_resume">Continue</string>
    <string name="recorder_stop">Stop</string>
    <string name="please_open_fm">Please turn on radio</string>
    <string name="sd_card_fail">Please check whether SD card is mounted</string>
    <string name="channel_list">Channel list</string>
    <string name="no_select">Unselected channels to be deleted</string>
    <string name="record_time">00:00:00</string>
    <string name="save_path">Saved Location:</string>
    <string name="point">.</string>
    <string name="new_channel">New channel</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="sleep_setting_mode">Exit FM after:</string>
    <string name="sleep_setting_stop">Sleep mode closed</string>
    <string name="close_sleep_setting">Disable Sleep Mode</string>
    <string name="sleep_setting_10">10 minutes</string>
    <string name="sleep_setting_30">30 minutes</string>
    <string name="sleep_setting_60">60 minutes</string>
    <string name="sleep_setting_90">90 minutes</string>
    <string name="sleep_setting_120">120 minutes</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="sleep_setting_toast">FM will stop after %d minutes</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="error_mediadb_new_record">Recorded audio cannot be saved</string>
    <string name="record_empty_list">Record list is empty!</string>
    <string name="audio_db_title_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="record_list">FM record list</string>
    <string name="record_not_support">Recording not supported!</string>
    <string name="record_hour">h</string>
    <string name="record_minute">m</string>
    <string name="record_second">s</string>
    <string name="recording_select_multi">Multiselect</string>
    <string name="recording_select_selall">Select all</string>
    <string name="recording_select_unselall">Unselect all</string>
    <string name="recording_select_del">Delete</string>
    <string name="recording_rename">Rename</string>
    <string name="recording_use_as_ringtone">Set as ringtone</string>
    <string name="ringtone_set">Set as ringtone successfully.</string>
    <string name="recording_send">Send</string>
    <string name="recording_attr">Attribute</string>
    <string name="recording_delete_ask">Delete?</string>
    <string name="recording_deleteing">Please wait</string>
    <string name="recording_RenameFail">Rename failed</string>
    <string name="recording_AttrTitle">Name:</string>
    <string name="recording_AttrTime">Modification date:</string>
    <string name="recording_AttrSize">Size:</string>
    <string name="recording_NoSelItem">No items selected</string>
    <string name="file_duration_unknow">Unknown</string>
    <string name="autoscanchannel">Auto Scan</string>
    <string name="recording_ing">"Recording  "</string>
    <string name="delete_channel">Delete channel</string>
    <string name="rec_list">Record list</string>
    <string name="delete_rec">Delete record</string>
    <string name="not_select">Unchecked entries</string>
    <string name="selected">"Selected "</string>
    <string name="number_of">" Article"</string>
    <string name="saved">" has been saved"</string>
    <string name="no_space">No space Left, Can not Record</string>
    <string name="delete_fm_recorder_history">Are you sure you want to delete the selected file?</string>
    <string name="isSaved">This channel list already exists</string>
    <string name="file_miss">File miss!</string>
    <string name="empty_recorder">Cannot record audio of 0 second in length</string>
    <string name="turn_on_airplane_mode">Please disable airplane mode before using the radio</string>
    <string name="namebad">File name contains illegal characters: \\ : ? * > \" | / etc..</string>
</resources>
