<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:id="@id/listhead" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:layout_width="200.0dip" android:layout_height="fill_parent" android:layout_marginLeft="18.0px" android:layout_weight="8.0" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listhead_number_channel" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="20.0px" android:textColor="#ff6e6e6e" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MHz" android:layout_below="@id/textView1" />
    </RelativeLayout>
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0px" android:text="@string/listhead_favoritestatus" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0px" android:text="@string/listhead_playing_720" />
</LinearLayout>