<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/dialog_manual" android:background="@drawable/pop_bg_1080p" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0px" android:textColor="#ff333333" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0px" android:text="@string/search_manual" android:layout_centerHorizontal="true" />
    <EditText android:textSize="30.0px" android:textStyle="bold" android:textColor="#ff333333" android:gravity="center_horizontal" android:id="@id/editText1" android:background="@null" android:layout_width="100.0px" android:layout_height="100.0px" android:layout_marginTop="150.0px" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:inputType="number" />
    <EditText android:textSize="30.0px" android:textStyle="bold" android:textColor="#ff333333" android:gravity="center_horizontal" android:id="@id/editText2" android:background="@null" android:layout_width="100.0px" android:layout_height="100.0px" android:layout_marginLeft="50.0px" android:layout_marginTop="150.0px" android:layout_toRightOf="@id/editText1" android:inputType="number" />
    <TextView android:textSize="20.0px" android:textColor="#ff333333" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="20.0px" android:text="@string/scope1" android:layout_below="@id/editText1" />
    <TextView android:textSize="20.0px" android:textColor="#ff333333" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0px" android:layout_marginTop="20.0px" android:text="@string/scope2" android:layout_toRightOf="@id/textView1" android:layout_below="@id/editText2" />
    <Button android:textColor="#ff333333" android:id="@id/ok" android:background="@drawable/pop_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0px" android:layout_marginTop="100.0px" android:layout_marginBottom="20.0px" android:text="@string/ok" android:layout_below="@id/textView1" />
    <Button android:textColor="#ff333333" android:id="@id/cancel" android:background="@drawable/pop_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0px" android:layout_marginBottom="20.0px" android:text="@string/cancel" android:layout_toRightOf="@id/ok" android:layout_below="@id/textView2" />
</RelativeLayout>